@@ -8134,3 +8134,7 @@ EPRINTS-3.1-beta-2
  * Changed default type for creators_id to email
  * Email searches now perform exact matches rather than text indexing
 
+2009-04-06 tdb
+ * Create database columns using utf8 character set
+ * database upgrade 3.2.0 converts utf8-in-latin to utf8
+
